--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,17 @@ h1 {
   margin-bottom: 15px;
 }
 
+p {
+  border: 1px solid black;
+  background-color: teal;
+  width: 90%;
+  height: 150px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  color: white;
+}
+
 /* Simple Responsive Framework */
 .row {
   width: 100%;
@@ -38,8 +49,35 @@ h1 {
   .col-md-2,
   .col-md-3 {
     float: left;
-    border: 1px;
+    border: 2px solid black;
+  }
+  .col-md-1 {
+    width: 50%;
+  }
+  .col-md-2 {
+    width: 50%;
+  }
+  .col-md-3 {
+    width: 100%;
+
   }
 }
 
 /* For Mobile Devices only   */
+@media (max-width: 768px) {
+  .col-sm-1,
+  .col-sm-2,
+  .col-sm-3 {
+    float: left;
+    border: 2px solid black;
+  }
+  .col-sm-1 {
+    width: 50%;
+  }
+  .col-sm-2 {
+    width: 50%;
+  }
+  .col-sm-3 {
+    width: 50%;
+  }
+}
