--- a/css/style.css
+++ b/css/style.css
@@ -3,81 +3,126 @@
   box-sizing: border-box;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
+
+body {
+  background-color: white;
+}
+
 h1 {
-  position: relative;
   margin-bottom: 15px;
+  text-align: center;
+  font-size: 50px;
+  color: teal;
+}
+
+section {
+  padding: 15px;
+  width: 90%;
+  position: relative;
 }
 
 p {
-  border: 1px solid black;
-  background-color: teal;
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  color: white;
+  position: relative;
+  clear: right; 
 }
 
 /* Simple Responsive Framework */
 .row {
+  width: 90%;
+}
+
+div {
+  position: relative;
+  border: 3.5px solid black;
+  background-color: gray;
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
+}
+
+.sub1 {
+  float: right;
+  width: 100px;
+  padding: 5px;
+  margin: -3px -3px 0px;
+  border: 3.5px solid black;
+  text-align: center;
+  font-size: 125%;
+  font-weight: bold;
+  background-color: #FFB6C1;
+
+}
+
+.sub2 {
+  float: right;
+  color: white;
+  width: 100px;
+  padding: 5px;
+  margin: -3px -3px 0px;
+  border: 3.5px solid black;
+  text-align: center;
+  font-size: 125%;
+  font-weight: bold;
+  background-color: #FF0000;
+
+}
+
+.sub3 {
+  color: black;
+  float: right;
+  width: 100px;
+  padding: 5px;
+   margin: -3px -3px 0px;
+  border: 3.5px solid black;
+  text-align: center;
+  font-size: 125%;
+  font-weight: bold;
+  background-color: rgb(223, 212, 121);
+
+}
+
+.content {
+  padding: 5px;
+  border: none;
+  background-color: gray;
+  font-family: Helvetica;
+  color: black;
+  margin: 3px ;
+  height: 150px;
+  overflow: auto;
 }
 
 /* For Desktop Devices only */
 @media (min-width: 992px) {
-  .col-lg-1,
-  .col-lg-2,
-  .col-lg-3 {
-    float: left;
-    border: 2px solid black;
-  }
-  .col-lg-1 {
-    width: 33.33%;
-  }
-  .col-lg-2 {
-    width: 33.33%;
-  }
-  .col-lg-3 {
-    width: 33.33%;
+  .col-lg-4 {
+      float: left;
+      width: 33.33%;
   }
 }
 
+
 /* For Tablet Devices only */
 @media (min-width: 768px) and (max-width: 991px) {
-  .col-md-1,
-  .col-md-2,
-  .col-md-3 {
-    float: left;
-    border: 2px solid black;
+  .col-md-6 {
+      float: left;
+      width: 50%;
+      margin-left: auto;
+      margin-right: auto;
   }
-  .col-md-1 {
-    width: 50%;
-  }
-  .col-md-2 {
-    width: 50%;
-  }
-  .col-md-3 {
-    width: 100%;
 
+  .col-md-12 {
+      float: left;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
   }
 }
 
 /* For Mobile Devices only   */
-@media (max-width: 768px) {
-  .col-sm-1,
-  .col-sm-2,
-  .col-sm-3 {
-    float: left;
-    border: 2px solid black;
-  }
-  .col-sm-1 {
-    width: 50%;
-  }
-  .col-sm-2 {
-    width: 50%;
-  }
-  .col-sm-3 {
-    width: 50%;
+@media (max-width: 767px) {
+  .col-sm-12 {
+      float: left;
+      width: 100%;
   }
 }
